<resources>
    <string name="app_name">Chat App</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="user_name">Email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in_instead">Sign in instead</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="full_name">Name</string>
    <string name="register">Register</string>
    <string name="please_wait">Please wait</string>
    <string name="loading">Loading…</string>
    <string name="requests">Requests</string>
    <string name="chats">Chats</string>
    <string name="friends">Friends</string>
    <string name="logout">Logout</string>
    <string name="account_settings">Account Settings</string>
</resources>